# studo-backend

./: .dockerignore  .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  remake_db.sh  requirements.txt
.github/workflows/: deploy.yml
src/: main.py
src/app/: config.py  database.py  models.py  schemas.py
src/app/routes/: auth.py  crud.py
tests/: conftest.py  test_auth.py  test_comments.py  test_groups_users.py  test_tasks.py
